# jsodb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/: jdb.py
src/jsodb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
