[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "jsodb"
version = "1.5.5"
authors = [
  { name="dttric", email="chudinovd222@gmail.com" },
]
description = "simple json database lib"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dttric/jsodb"
"Bug Tracker" = "https://github.com/dttric/jsodb/issues"