[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "jsodb"
version = "1.6"
authors = [
  { name="dttric", email="chudinovd222@gmail.com" },
]
description = "simple json database lib"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
    "Thanks to :: ClydeAI :: Google Bard"
]

[project.urls]
"Homepage" = "https://github.com/dttric/jsodb"
"Bug Tracker" = "https://github.com/dttric/jsodb/issues"